# katss

./: .gitignore  CMakeLists.txt  README.md
source/: CMakeLists.txt
source/katss/: CMakeLists.txt
source/katss/KmerCounter/: CMakeLists.txt
source/katss/KmerCounter/include/: bootstrap.h  counter.h  enrichments.h
source/katss/KmerCounter/source/: CMakeLists.txt  bootstrap.c  counter.c  enrichments.c  katss_enrichment.c  katss_helpers.c  katss_ikke.c  recounter.c  tables.c  ushuffle.h
source/katss/Structure/: CMakeLists.txt  bpp_tables.c  bpp_tables.h  structure.c  structure.h
source/katss/helpers/: CMakeLists.txt  rnafiles.c  rnafiles.h  t_test1.c  t_test2.c  toms708.c
source/seqfile/: CMakeLists.txt
source/seqfile/include/: CMakeLists.txt
source/seqfile/source/: CMakeLists.txt  readreads.c
source/seqfile/test/: CMakeLists.txt  minunit.h  tests.c
source/seqfile/test/example_files/: example.fasta  example.fastq  example.reads
source/tinycthread/: CMakeLists.txt
